--- a/index.html
+++ b/index.html
@@ -1,10 +1,127 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="styles/global.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="fonts/fonts.css">
+</head>
+<body>
+  <header class="header">
+    <div class="container header__menu">
+      <nav>
+        <ul class="header__list_menu">
+          <li><a class="header__link_active" href="#">главная</a></li>
+          <li><a class="header__list_item" href="#">посмотреть лоты</a></li>
+          <li><a class="header__list_item" href="#">об аукционе</a></li>
+        </ul>
+      </nav>
+      <div class="header__logo">
+        <a href="#"><img src="images/logo-black.svg" alt="Лого проекта"></a>
+      </div>
+      <address class="header__adress">
+        <a class="header__adress__link" href="#">+9 999 555 5555</a><br>
+        <a class="header__adress__link" href="#">info@sobaka.ge</a><br>
+        <span>наб. Принсенграхт 263- 265, Амстердам</span>
+      </address>  
+    </div>
+  </header>
+  <main>
+    <section class="cover">
+      <div class="container overlay cover__overlay">
+        <h1 class="cover__title">
+          <span class="accent__span aligned-text">ОНО</span>
+          <span class="accent__span aligned-text_center">ТЕБЕ</span>
+          <span class="accent__span aligned-text_right">НАДО</span>
+        </h1>
+        <div class="cover__description"> 
+          <span class="cover__description-text">Аукцион вещей, в которые никто не верил</span>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </div>
+    </section>
+    <section class="lots">
+      <div class="container">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card-link">
+            <article class="card card_type_film">
+              <div class="overlay__lots">
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </div>  
+            </article>
+          </li>  
+          <li class="lots__card-list-item card-link">  
+            <article class="card card_type_book">
+              <div class="overlay__lots">
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </div>
+            </article>
+          </li>
+          <li class="lots__card-list-item card-link">     
+            <article class="card card_type_picture">
+              <div class="overlay__lots">
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </div>
+            </article>
+          </li>
+        </ul>
+        <span class="lots__look-more-link">посмотреть больше</span>
+      </div>
+    </section>
+    <section class="about">
+      <div class="container about__grid">
+        <div class="about__logo">
+                      <!---- <img src="/images/logo-white.svg" alt="Фон логотипа"> -->
+          <img src="/images/logo-column.svg" alt="Лого об аукционе">
+        </div>  
+        <div class="about_column">
+          <h2 class="about__title">Об аукционе</h2>
+            <p class="about__text_first">
+              Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+            </p>
+            <p class="about__text_second">
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
+            </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container footer_flex">
+      <address class="footer__adress">
+          <a class="footer__adress__link" href="#">+9 999 555 5555</a><br>
+          <a class="footer__adress__link" href="#">info@sobaka.ge</a><br>
+          <span>наб. Принсенграхт 263- 265,<br> Амстердам</span>
+      </address>
+      <nav>
+        <div class="footer__menu">
+            <ul class="footer__menu-list">
+              <li><a class="footer__menu-link_active" href="#">главная</a></li>
+              <li><a class="footer__menu-list-item" href="#">посмотреть лоты</a></li>
+              <li><a class="footer__menu-list-item" href="#">об аукционе</a></li>
+            </ul>
+        </div>
+      </nav>
+      <div class="footer__social-list">
+        <a href="#">
+          <img src="/images/YouTube.png" alt="Логотип Ютуб">
+        </a>
+        <a href="#">
+          <img src="/images/VK.png" alt="Логотип Вконтакте">
+        </a>
+        <a href="#">
+          <img src="/images/Pinterest.png" alt="Логотип Пинтинтерест">
+        </a>
+      </div>
+    </div>
+
+  </footer>
+  </body>
 </html>
