--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="styles/global.css">
-  <link rel="stylesheet" href="style.css"></head>
+  <link rel="stylesheet" href="styles/style.css"></head>
 <body>
   <header class="header">
     <div class="container header__menu">
