--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Оно тебе надо</title>
   <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="styles/global.css">
   <link rel="stylesheet" href="styles/style.css"></head>
@@ -21,8 +21,8 @@
         <a href="#"><img src="images/logo-black.svg" alt="Лого проекта"></a>
       </div>
       <address class="header__adress">
-        <a class="header__adress__link" href="#">+9 999 555 5555</a><br>
-        <a class="header__adress__link" href="#">info@sobaka.ge</a><br>
+        <a class="header__adress__link" href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a class="header__adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
         <span>наб. Принсенграхт 263- 265, Амстердам</span>
       </address>  
     </div>
@@ -95,8 +95,8 @@
   <footer class="footer">
     <div class="container footer_flex">
       <address class="footer__adress">
-          <a class="footer__adress__link" href="#">+9 999 555 5555</a><br>
-          <a class="footer__adress__link" href="#">info@sobaka.ge</a><br>
+          <a class="footer__adress__link" href="tel:+99995555555">+9 999 555 5555</a><br>
+          <a class="footer__adress__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
           <span>наб. Принсенграхт 263- 265,<br> Амстердам</span>
       </address>
       <nav>
