--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <title>Оно тебе надо</title>
   <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="styles/global.css">
-  <link rel="stylesheet" href="styles/style.css"></head>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
 <body>
   <header class="header">
     <div class="container header__menu">
       <nav>
         <ul class="header__list_menu">
           <li><a class="header__link_active" href="#">главная</a></li>
-          <li><a class="header__list_item" href="#">посмотреть лоты</a></li>
-          <li><a class="header__list_item" href="#">об аукционе</a></li>
+          <li class="dot"><a class="header__list_item" href="#">посмотреть лоты</a></li>
+          <li class="dot"><a class="header__list_item" href="#">об аукционе</a></li>
         </ul>
       </nav>
       <div class="header__logo">
